--- a/SCSS/layout/_portfolio.scss
+++ b/SCSS/layout/_portfolio.scss
@@ -4,7 +4,7 @@
 	text-align: center;
 	background-color: $color-white;
 	.flex-container {
-	@include flexbox();
+	@include flexbox($justc: space-around);
 	text-align: center;
 
 		@media (min-width: $br-small) {
