--- a/SCSS/utilities/_variables.scss
+++ b/SCSS/utilities/_variables.scss
@@ -9,7 +9,6 @@ $color-white: #fefefe;
 //gutter padding and margins
 $gutter: 10px;
 $section-gutter: 20px;
-$padding-header-align: 0 20px;
 
 //breakpoints
 $br-small: 768px;
